# space-datacentre-model

./: .gitignore  CLAUDE.md  MEMORY.md  README.md  app.py  build_dashboard.py  build_notebook.py  odc_model.py  pyproject.toml  requirements.txt
.claude/: launch.json
archive/: odc_model_v1.py
dashboard/: orbital_datacentre_dashboard.html  orbital_datacentre_dashboard_standalone.html
docs/: MODELING_METHODS.md  modeling_methods_research.json
notebooks/: orbital_datacentre_viability.ipynb
odc/: __init__.py  comms.py  core.py  finance.py  ground_energy.py  hardware.py  model.py  orbits.py  presets.py  provenance.py  results.py  scenarios.py  schema.py  sizes.py  workloads.py
odc.egg-info/: PKG-INFO  SOURCES.txt
scripts/: build_methods_doc.py
streamlit_app/: __init__.py  charts.py  compute.py  main.py  state.py
streamlit_app/tabs/: __init__.py  builder.py  ladder.py  methods.py  provenance.py  results.py  sensitivity.py  workloads.py
tests/: test_oo_api.py  test_regression.py
