[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "odc"
version = "3.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
]

[project.optional-dependencies]
# Streamlit front-end (additive; the Chart.js dashboard needs none of these).
# Install with:  pip install -e .[app]
app = [
    "streamlit>=1.30",
    "plotly>=5.18",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["odc*"]
